--- a/api_root_lambda/package.json
+++ b/api_root_lambda/package.json
@@ -1,12 +1,16 @@
 {
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "typescript": "^4.2.2"
   },
   "scripts": {
     "test": "jest --collectCoverage",
     "build": "tsc && cp -rf node_modules ../cdk/build/api_root_lambda",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "script:syncdb": "ts-node scripts/sync_db.ts"
+    "lint": "eslint . --ext .ts,.js ./",
+    "lint:fix": "yarn run lint --fix"
   }
 }
