--- a/cdk/package.json
+++ b/cdk/package.json
@@ -10,13 +10,20 @@
     "build": "yarn run build:api_root_lambda && yarn run build:cdk",
     "deploy": "npm run build && cdk deploy",
     "test": "jest",
+    "lint": "eslint . --ext .ts,.js ./",
+    "lint:fix": "yarn run lint --fix",
     "cdk": "cdk"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.91.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
     "aws-cdk": "1.91.0",
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
