--- a/.github/workflows/merge-check.yml
+++ b/.github/workflows/merge-check.yml
@@ -1,15 +1,14 @@
-
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Merge Check
 
 on:
   push:
     branches: [master]
   pull_request:
     branches: [master]
-
+    
 jobs:
   CDKMergeCheck:
     runs-on: ubuntu-latest
@@ -25,7 +24,6 @@ jobs:
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
-
       - uses: actions/cache@v2
         id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
         with:
@@ -34,6 +32,42 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
       - name: Install dependencies
+        working-directory: ${{env.working-directory}}
         run: yarn install --frozen-lockfile
       - name: Link Check
+        working-directory: ${{env.working-directory}}
         run: yarn run lint
+      - name: Run Tests
+        working-directory: ${{env.working-directory}}
+        run: yarn run test
+
+  APIRootLambdaMergeCheck:
+    runs-on: ubuntu-latest
+    env:
+      working-directory: "./api_root_lambda"
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Node Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "12.x"
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v2
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - name: Install dependencies
+        working-directory: ${{env.working-directory}}
+        run: yarn install --frozen-lockfile
+      - name: Link Check
+        working-directory: ${{env.working-directory}}
+        run: yarn run lint
+      - name: Run Tests
+        working-directory: ${{env.working-directory}}
+        run: yarn run test
