--- a/api_root_lambda/package.json
+++ b/api_root_lambda/package.json
@@ -1,14 +1,20 @@
 {
   "devDependencies": {
+    "@babel/core": "^7.13.8",
+    "@babel/preset-env": "^7.13.9",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3",
     "typescript": "^4.2.2"
   },
   "scripts": {
-    "test": "jest --collectCoverage",
+    "test": "jest",
     "build": "tsc && cp -rf node_modules ../cdk/build/api_root_lambda",
     "lint": "eslint . --ext .ts,.js ./",
     "lint:fix": "yarn run lint --fix"
