--- a/cdk/package.json
+++ b/cdk/package.json
@@ -16,11 +16,15 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.91.0",
-    "@types/jest": "^26.0.10",
+    "@babel/core": "^7.13.8",
+    "@babel/preset-env": "^7.13.9",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/jest": "^26.0.20",
     "@types/node": "10.17.27",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "aws-cdk": "1.91.0",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
