--- a/cdk/package.json
+++ b/cdk/package.json
@@ -37,6 +37,7 @@
     "@aws-cdk/aws-apigateway": "^1.91.0",
     "@aws-cdk/aws-lambda": "^1.91.0",
     "@aws-cdk/core": "1.91.0",
+    "dotenv": "^8.2.0",
     "source-map-support": "^0.5.16"
   }
 }
