--- a/cdk/package.json
+++ b/cdk/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.91.0",
+    "@aws-cdk/aws-cognito": "^1.93.0",
     "@aws-cdk/aws-lambda": "^1.91.0",
     "@aws-cdk/core": "1.91.0",
     "dotenv": "^8.2.0",
