--- a/cdk/package.json
+++ b/cdk/package.json
@@ -34,10 +34,14 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.91.0",
+    "@aws-cdk/aws-apigateway": "^1.93.0",
+    "@aws-cdk/aws-codebuild": "^1.93.0",
+    "@aws-cdk/aws-codepipeline": "^1.93.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.93.0",
     "@aws-cdk/aws-cognito": "^1.93.0",
-    "@aws-cdk/aws-lambda": "^1.91.0",
-    "@aws-cdk/core": "1.91.0",
+    "@aws-cdk/aws-lambda": "^1.93.0",
+    "@aws-cdk/core": "^1.93.0",
+    "@aws-cdk/pipelines": "^1.93.0",
     "dotenv": "^8.2.0",
     "source-map-support": "^0.5.16"
   }
