--- a/cdk/package.json
+++ b/cdk/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "build:cdk": "tsc",
     "build:api_root_lambda": "cd ../api_root_lambda && yarn install && npm run build && cd ../cdk",
-    "build": "yarn run build:api_root_lambda && yarn run build:cdk",
-    "deploy": "npm run build && cdk deploy",
+    "build": "yarn run build:api_root_lambda && yarn install && yarn run build:cdk",
+    "deploy": "npm run build && cdk deploy MealSnapAppStack",
+    "deploy:stack": "npm run build && cdk deploy",
     "test": "jest",
     "lint": "eslint . --ext .ts,.js ./",
     "lint:fix": "yarn run lint --fix",
@@ -37,11 +38,9 @@
     "@aws-cdk/aws-apigateway": "^1.93.0",
     "@aws-cdk/aws-codebuild": "^1.93.0",
     "@aws-cdk/aws-codepipeline": "^1.93.0",
-    "@aws-cdk/aws-codepipeline-actions": "^1.93.0",
     "@aws-cdk/aws-cognito": "^1.93.0",
     "@aws-cdk/aws-lambda": "^1.93.0",
     "@aws-cdk/core": "^1.93.0",
-    "@aws-cdk/pipelines": "^1.93.0",
     "dotenv": "^8.2.0",
     "source-map-support": "^0.5.16"
   }
