--- a/api_root_lambda/package.json
+++ b/api_root_lambda/package.json
@@ -15,10 +15,12 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "jest": "^26.6.3",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
   },
   "scripts": {
     "test": "jest",
+    "file": "ts-node",
     "build": "tsc && yarn install --prod --modules-folder ../cdk/build/api_root_lambda/node_modules",
     "lint": "eslint . --ext .ts,.js ./",
     "lint:fix": "yarn run lint --fix"
