--- a/.github/workflows/continous-integration.yml
+++ b/.github/workflows/continous-integration.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Merge Check
+name: Continous Integration
 
 on:
   push:
@@ -48,10 +48,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       working-directory: "./api_root_lambda"
-      TEST_DB_HOST: ${{ secrets.TEST_DB_HOST }}
-      TEST_DB_NAME: ${{ secrets.TEST_DB_NAME }}
-      TEST_DB_PASSWORD: ${{ secrets.TEST_DB_PASSWORD }}
-      TEST_DB_USER: ${{ secrets.TEST_DB_USER }}
+      TEST_DB_HOST: ${{ secrets.TEST_DB_URL }}
 
     steps:
       - uses: actions/checkout@v2
