Able to publically add items

--- a/api_root_lambda/package.json
+++ b/api_root_lambda/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@vendia/serverless-express": "^4.3.4",
+    "aws-sdk": "^2.868.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
