--- a/api_root_lambda/package.json
+++ b/api_root_lambda/package.json
@@ -31,9 +31,6 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "pg": "^8.5.1",
-    "pg-hstore": "^2.3.3",
-    "sequelize": "^6.5.0"
+    "express": "^4.17.1"
   }
 }
