--- a/cdk/package.json
+++ b/cdk/package.json
@@ -40,6 +40,7 @@
     "@aws-cdk/aws-codebuild": "^1.93.0",
     "@aws-cdk/aws-codepipeline": "^1.93.0",
     "@aws-cdk/aws-cognito": "^1.93.0",
+    "@aws-cdk/aws-dynamodb": "1.93.0",
     "@aws-cdk/aws-lambda": "^1.93.0",
     "@aws-cdk/aws-s3": "1.93.0",
     "@aws-cdk/core": "^1.93.0",
