--- a/cdk/package.json
+++ b/cdk/package.json
@@ -5,12 +5,9 @@
     "cdk": "build/cdk/index.js"
   },
   "scripts": {
-    "build:cdk": "tsc",
-    "build:api_root_lambda": "cd ../api_root_lambda && npm run build && cd ../cdk",
-    "build": "yarn run build:api_root_lambda && yarn install && yarn run build:cdk",
-    "deploy": "npm run build && cdk deploy MealSnapAppStack-dev",
-    "deploy:stack": "npm run build && cdk deploy",
-    "file": "ts-node",
+    "deploy": "cdk deploy MealSnapAppStack-dev",
+    "deploy:stack": "cdk deploy",
+    "ts": "ts-node",
     "test": "jest",
     "lint": "eslint . --ext .ts,.js ./",
     "lint:fix": "yarn run lint --fix",
