--- a/api_root_lambda/package.json
+++ b/api_root_lambda/package.json
@@ -7,6 +7,7 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
+    "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
@@ -16,6 +17,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "jest": "^26.6.3",
+    "supertest": "^6.1.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
   },
