--- a/cdk/package.json
+++ b/cdk/package.json
@@ -38,6 +38,7 @@
     "@aws-cdk/aws-codepipeline": "^1.93.0",
     "@aws-cdk/aws-cognito": "^1.93.0",
     "@aws-cdk/aws-dynamodb": "1.93.0",
+    "@aws-cdk/aws-iam": "1.93.0",
     "@aws-cdk/aws-lambda": "^1.93.0",
     "@aws-cdk/aws-s3": "1.93.0",
     "@aws-cdk/core": "^1.93.0",
