--- a/api_root_lambda/tsconfig.json
+++ b/api_root_lambda/tsconfig.json
@@ -20,6 +20,7 @@
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
     "esModuleInterop": true,
+    "incremental": true,
     "allowJs": true,
     "typeRoots": [
       "./node_modules/@types"
