--- a/scripts/package.json
+++ b/scripts/package.json
@@ -8,13 +8,20 @@
   },
   "dependencies": {
     "aws-amplify": "^3.3.24",
+    "aws-sdk": "^2.896.0",
+    "axios": "^0.21.1",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
-    "minimist": "^1.2.5"
+    "lodash": "^4.17.21",
+    "lorem-ipsum": "^2.0.3",
+    "minimist": "^1.2.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.168",
     "@types/minimist": "^1.2.1",
     "@types/node": "^14.14.34",
+    "@types/uuid": "^8.3.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
