--- a/api_root_lambda/package.json
+++ b/api_root_lambda/package.json
@@ -17,6 +17,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
     "supertest": "^6.1.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
@@ -26,7 +27,8 @@
     "file": "ts-node",
     "build": "tsc",
     "lint": "eslint . --ext .ts,.js ./",
-    "lint:fix": "yarn run lint --fix"
+    "lint:fix": "yarn run lint --fix",
+    "dev:server": "NODE_ENV=local nodemon"
   },
   "dependencies": {
     "@vendia/serverless-express": "^4.3.4",
